overflow fixed

--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,8 @@ body {
     font-size: 16px;
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
+    overflow: hidden;
+
 
     #gameboard {
         width: 100%;
